# hitbox

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml  cspell.json  deny.toml  release.toml
.cargo/: config.toml
examples/: Cargo.toml
examples/examples/: axum.rs  composition.rs  hyper_client.rs  observability.rs  reqwest.rs  tower.rs
hitbox/: CHANGELOG.md  Cargo.toml  README.md
hitbox-backend/: CHANGELOG.md  Cargo.toml  README.md
hitbox-backend/examples/: key_format_usage.rs
hitbox-backend/src/: backend.rs  composition.rs  compressor.rs  context.rs  error.rs  key.rs  lib.rs  metrics.rs  serializer.rs
hitbox-backend/src/composition/: compose.rs  context.rs  envelope.rs  format.rs  mod.rs
hitbox-backend/src/composition/policy/: builder.rs  mod.rs
hitbox-backend/src/composition/policy/read/: mod.rs  parallel.rs  race.rs  sequential.rs
hitbox-backend/src/composition/policy/refill/: always.rs  mod.rs  never.rs
hitbox-backend/src/composition/policy/write/: mod.rs  optimistic_parallel.rs  race.rs  sequential.rs
hitbox-backend/src/format/: bincode.rs  json.rs  mod.rs  rkyv.rs  ron.rs
hitbox-backend/tests/: composition_error_handling.rs  composition_format_optimization.rs  erased.rs  key_format.rs  metrics.rs  mod.rs
hitbox-backend/tests/common/: mod.rs  test_backend.rs
hitbox-backend/tests/composition/: builder.rs  compose_api.rs  context_refill.rs  error_handling.rs  format_optimization.rs  mod.rs  nested.rs  trait_objects.rs
hitbox-backend/tests/composition/policy/: mod.rs  read.rs  refill.rs  write.rs
hitbox-configuration/: Cargo.toml  README.md
hitbox-configuration/src/: config.rs  endpoint.rs  error.rs  lib.rs
hitbox-configuration/src/backend/: backends.rs  composition.rs  compression.rs  core.rs  feoxdb.rs  mod.rs  moka.rs  redis.rs  serialization.rs
hitbox-configuration/src/extractors/: body.rs  header.rs  method.rs  mod.rs  path.rs  query.rs  transform.rs  version.rs
hitbox-configuration/src/predicates/: header.rs  mod.rs  version.rs
hitbox-configuration/src/predicates/body/: mod.rs  operation.rs
hitbox-configuration/src/predicates/request/: body.rs  expression.rs  header.rs  method.rs  mod.rs  operation.rs  path.rs  predicate.rs  query.rs
hitbox-configuration/src/predicates/response/: body.rs  header.rs  mod.rs  status.rs
hitbox-configuration/tests/: test_backend.rs  test_backend_instantiation.rs  test_extractors.rs  test_reponse.rs  test_request.rs
hitbox-core/: Cargo.toml  README.md
hitbox-core/src/: cacheable.rs  context.rs  extractor.rs  key.rs  label.rs  lib.rs  offload.rs  policy.rs  predicate.rs  request.rs  response.rs  upstream.rs  value.rs
hitbox-core/src/predicate/: combinators.rs  mod.rs  neutral.rs
hitbox-core/tests/: response.rs
hitbox-http/: CHANGELOG.md  Cargo.toml  README.md
hitbox-http/benches/: predicate_performance.rs
hitbox-http/src/: body.rs  cache_status.rs  cacheable.rs  config.rs  lib.rs  query.rs  request.rs  response.rs
hitbox-http/src/extractors/: body.rs  header.rs  method.rs  mod.rs  path.rs  query.rs  transform.rs  version.rs
hitbox-http/src/predicates/: mod.rs
hitbox-http/src/predicates/body/: jq.rs  mod.rs  operation.rs  plain.rs  predicate.rs
hitbox-http/src/predicates/conditions/: mod.rs
hitbox-http/src/predicates/header/: mod.rs  operation.rs  predicate.rs
hitbox-http/src/predicates/request/: body.rs  header.rs  method.rs  mod.rs  path.rs  query.rs
hitbox-http/src/predicates/response/: body.rs  header.rs  mod.rs  status.rs
hitbox-http/src/predicates/version/: mod.rs  operation.rs  predicate.rs
hitbox-http/tests/: body.rs  buffered_body.rs  mod.rs  test_cacheable_trait.rs
hitbox-http/tests/predicates/: conditions.rs  mod.rs
hitbox-http/tests/predicates/reponse/: body.rs  mod.rs
hitbox-http/tests/predicates/response/: body.rs  plain_operation.rs
hitbox-moka/: CHANGELOG.md  Cargo.toml  README.md
hitbox-moka/src/: backend.rs  builder.rs  lib.rs  metrics.rs
hitbox-moka/tests/: memory_eviction.rs
hitbox-redis/: CHANGELOG.md  Cargo.toml  README.md
hitbox-redis/examples/: full_configuration.rs
hitbox-redis/src/: backend.rs  error.rs  lib.rs
hitbox-reqwest/: Cargo.toml  README.md
hitbox-reqwest/src/: lib.rs  middleware.rs  upstream.rs
hitbox-reqwest/tests/: cache_middleware_tests.rs
hitbox-test/: Cargo.toml  TEST_PLAN_RESPONSE.md  data.yaml
hitbox-test/benches/: backend_comparison.rs  backend_concurrency.rs  backend_format.rs  cache_future_reference.rs  composition_overhead.rs  load_test.rs
hitbox-test/benches/fixtures/: load_test_config.yaml  reference_config.yaml  reference_config_body.yaml  reference_request.json  reference_response.json
hitbox-test/src/: app.rs  cache_key.rs  core.rs  handler_state.rs  handlers.rs  lib.rs  mock_backend.rs  tracing.rs
hitbox-test/src/backend/: mod.rs
hitbox-test/src/fsm/: mod.rs  world.rs
hitbox-test/src/fsm/steps/: given.rs  then.rs  when.rs
hitbox-test/src/steps/: given.rs  then.rs  when.rs
hitbox-test/tests/: bdd.rs  mock_time_integration.rs
hitbox-test/tests/features/concurrency/: concurrency.feature
hitbox-test/tests/features/extractors/body/: extractor.feature
hitbox-test/tests/features/extractors/combinations/: combinations.feature
hitbox-test/tests/features/extractors/header/: extractor.feature
hitbox-test/tests/features/extractors/method/: extractor.feature
hitbox-test/tests/features/extractors/path/: extractor.feature
hitbox-test/tests/features/fsm/: cache_behavior.feature  composition.feature
hitbox-test/tests/features/logical/: and.feature  complex-combinations.feature  not.feature  or.feature
hitbox-test/tests/fsm/: bdd.rs
hitbox-test/tests/integration/: bdd.rs
hitbox-test/tests/integration/backend/: comprehensive_tests.rs
hitbox-tower/: Cargo.toml  README.md
hitbox-tower/src/: future.rs  layer.rs  lib.rs  service.rs  upstream.rs
hitbox/src/: backend.rs  concurrency.rs  config.rs  context.rs  lib.rs  metrics.rs  policy.rs
hitbox/src/fsm/: future.rs  mod.rs  states.rs  transitions.rs
hitbox/src/offload/: manager.rs  mod.rs  policy.rs
(+58 files in other folders)
