[package]
name = "hitbox-examples"
version = "0.0.0"
publish = false
edition = "2024"
rust-version.workspace = true
license = "MIT"
autoexamples = false

[features]
default = []
tracing = [
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]
observability = ["tracing", "dep:metrics-exporter-prometheus"]

[dev-dependencies]
hitbox = { path = "../hitbox", features = ["metrics"] }
hitbox-core = { path = "../hitbox-core" }
hitbox-backend = { path = "../hitbox-backend" }
hitbox-http = { path = "../hitbox-http" }
hitbox-tower = { path = "../hitbox-tower" }
hitbox-moka = { path = "../hitbox-moka" }
hitbox-redis = { path = "../hitbox-redis" }
hitbox-configuration = { path = "../hitbox-configuration" }
hitbox-reqwest = { path = "../hitbox-reqwest" }
hitbox-feoxdb = { path = "../hitbox-feoxdb" }

reqwest = { version = "0.13", features = ["json"] }
reqwest-middleware = "0.5"

actix = "0.13"
axum = { workspace = true }
log = "0.4"
actix-rt = "2"
serde = { workspace = true }
env_logger = "0.11"
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
hyper = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
lazy_static = "1"
erased-serde = "0.4"
smol_str = { workspace = true }
tempfile = "3"
chrono = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }

# OpenTelemetry and metrics (optional, for observability example)
[dependencies]
opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }
opentelemetry_sdk = { version = "0.31", features = [
    "rt-tokio",
], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
metrics-exporter-prometheus = { version = "0.18", optional = true }

[[example]]
name = "axum"
path = "examples/axum.rs"

[[example]]
name = "reqwest"
path = "examples/reqwest.rs"

[[example]]
name = "tower"
path = "examples/tower.rs"

[[example]]
name = "observability"
path = "examples/observability.rs"
required-features = ["observability"]

[[example]]
name = "composition"
path = "examples/composition.rs"
