[package]
name = "hitbox-backend"
version = "0.1.0"
authors = [
    "Belousov Max <mail@singulared.space>",
    "Andrey Ermilov <andrerm@ya.ru>",
]
license = "MIT"
edition = "2024"
rust-version.workspace = true
description = "Backend trait for asynchronous caching framework in Rust."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "actix", "async", "cache-backend", "hitbox"]

[dependencies]
hitbox-core = { path = "../hitbox-core", version = "0.1.0" }
async-trait = { workspace = true }
futures = { workspace = true, features = ["async-await"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
bincode = { workspace = true }
bitcode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
serde_urlencoded = { version = "0.7.1", default-features = false }
erased-serde = "0.4"
bytes = { workspace = true }
bytemuck = { version = "1.19", features = ["derive"] }
smol_str = { workspace = true }
smallbox = { workspace = true }
pin-project = { workspace = true }

# Compression support (optional)
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }
ron = "0.12.0"

# Metrics support (optional)
metrics = { version = "0.24", optional = true }
lazy_static = { version = "1", optional = true }

# Additional serialization formats (optional)
rkyv = { workspace = true, optional = true }

[features]
default = []
gzip = ["dep:flate2"]
zstd = ["dep:zstd"]
metrics = ["dep:metrics", "dep:lazy_static"]
rkyv_format = ["dep:rkyv", "hitbox-core/rkyv_format"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
criterion = { workspace = true, features = ["html_reports"] }
dashmap = "6.1"
bytemuck = { version = "1.19", features = ["derive"] }
http = { workspace = true }
http-serde = "2.1.1"
flexbuffers = "25.2"
metrics-util = "0.20"
smol_str = { workspace = true }
chrono = { workspace = true }
serial_test = "3.2"
futures = { workspace = true }
