[package]
name = "hitbox-configuration"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
description = "Configuration support for Hitbox caching framework"
readme = "README.md"
keywords = ["cache", "configuration", "yaml", "hitbox", "tower"]

[dependencies]
hitbox = { path = "../hitbox/", version = "0.1" }
hitbox-core = { path = "../hitbox-core/", version = "0.2" }
hitbox-http = { path = "../hitbox-http/", version = "0.1" }
hitbox-backend = { path = "../hitbox-backend/", version = "0.2" }
hitbox-moka = { path = "../hitbox-moka/", version = "0.1", optional = true }
hitbox-feoxdb = { path = "../hitbox-feoxdb/", version = "0.1", optional = true }
hitbox-redis = { path = "../hitbox-redis/", version = "0.1", optional = true }
http = { workspace = true }
hyper = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
indexmap = { version = "2.10", features = ["serde"] }
thiserror = { workspace = true }
regex = { workspace = true }
bytes = { workspace = true }
bytesize = { version = "2", features = ["serde"] }
rkyv = { workspace = true, optional = true }

[features]
default = []
moka = ["hitbox-moka"]
feoxdb = ["hitbox-feoxdb"]
redis = ["hitbox-redis"]
gzip = ["hitbox-backend/gzip"]
zstd = ["hitbox-backend/zstd"]
rkyv_format = ["dep:rkyv", "hitbox-backend/rkyv_format"]


[dev-dependencies]
pretty_assertions = "1.4"
tokio = { workspace = true, features = ["test-util", "macros"] }
bytes = { workspace = true }
hitbox = { path = "../hitbox", version = "0.1" }
http-body-util = { workspace = true }
