[package]
name = "hitbox-core"
version = "0.1.0"
authors = [
    "Belousov Max <mail@singulared.space>",
    "Andrey Ermilov <andrerm@ya.ru>",
]
license = "MIT"
edition = "2024"
rust-version.workspace = true
description = "Asynchronous caching framework core traits."
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = ["caching", "asynchronous"]
keywords = ["cache", "async", "cache-backend", "hitbox", "tokio"]


[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
serde = { workspace = true }
bitcode = { workspace = true, features = ["derive"] }
bytes = { version = "1", features = ["serde"] }
smol_str = { workspace = true }
smallbox = { workspace = true }
pin-project = { workspace = true }

# Optional rkyv support
rkyv = { workspace = true, optional = true }

[features]
default = []
# Enable rkyv serialization support
rkyv_format = ["dep:rkyv"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
