[package]
name = "hitbox-core"
version = "0.2.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
description = "Asynchronous caching framework core traits."
readme = "README.md"
keywords = ["cache", "async", "cache-backend", "hitbox", "tokio"]


[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
serde = { workspace = true }
bitcode = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
smol_str = { workspace = true }
smallbox = { workspace = true }
pin-project = { workspace = true }

# Optional rkyv support
rkyv = { workspace = true, optional = true }

[features]
default = []
# Enable rkyv serialization support
rkyv_format = ["dep:rkyv"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
