[package]
name = "hitbox-redis"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
description = "Hitbox redis backend."
readme = "README.md"
keywords = ["cache", "async", "cache-backend", "hitbox", "redis"]

[dependencies]
hitbox-backend = { path = "../hitbox-backend", version = "0.2" }
hitbox = { path = "../hitbox", version = "0.2" }
log = "0.4"
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
smol_str = { workspace = true }

# TODO: move to dev dependencies
chrono = { workspace = true }

[features]
default = []
cluster = ["redis/cluster-async"]

[dev-dependencies]
# chrono = { workspace = true }
hitbox-moka = { path = "../hitbox-moka", version = "0.2" }
tokio = { workspace = true, features = [
    "time",
    "macros",
    "test-util",
    "rt-multi-thread",
] }
