[package]
name = "hitbox-reqwest"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
categories = [
    "caching",
    "asynchronous",
    "network-programming",
    "web-programming",
]
description = "Hitbox cache integration for reqwest HTTP client via reqwest-middleware"
readme = "README.md"
keywords = ["cache", "reqwest", "async", "http", "hitbox"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["docs"]
# Enable this feature to build documentation with links to backend crates
docs = ["dep:hitbox-moka", "dep:hitbox-redis", "dep:hitbox-feoxdb"]

[dependencies]
hitbox = { path = "../hitbox", version = "0.2" }
hitbox-core = { path = "../hitbox-core", version = "0.2" }
hitbox-backend = { path = "../hitbox-backend", version = "0.2" }
hitbox-http = { path = "../hitbox-http", version = "0.1" }

# Optional dependencies for documentation links
hitbox-moka = { path = "../hitbox-moka", version = "0.2", optional = true }
hitbox-redis = { path = "../hitbox-redis", version = "0.2", optional = true }
hitbox-feoxdb = { path = "../hitbox-feoxdb", version = "0.2", optional = true }

reqwest = { version = "0.13", default-features = false }
reqwest-middleware = "0.5"
async-trait = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
hitbox-moka = { path = "../hitbox-moka", version = "0.2" }
wiremock = "0.6"
hitbox-configuration = { path = "../hitbox-configuration", version = "0.1" }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
