[package]
edition = "2024"
rust-version.workspace = true
name = "hitbox-test"
version = "0.1.0"
authors = ["Hitbox team <mail@hitbox.rs>"]
license = "MIT"
description = "Hitbox integration tests"
readme = "README.md"
repository = "https://github.com/hit-box/hitbox/"
categories = [
    "caching",
    "asynchronous",
    "network-programming",
    "web-programming",
]
keywords = ["cache", "tower", "async", "http", "hitbox"]

[dependencies]
hitbox = { path = "../hitbox", version = "0.1" }
hitbox-core = { path = "../hitbox-core", version = "0.1", features = [
    "test-helpers",
] }
hitbox-http = { path = "../hitbox-http", version = "0.1" }
hitbox-backend = { path = "../hitbox-backend", version = "0.1" }
hitbox-moka = { path = "../hitbox-moka", version = "0.1" }
hitbox-feoxdb = { path = "../hitbox-feoxdb", version = "0.1" }
hitbox-redis = { path = "../hitbox-redis", version = "0.1" }
hitbox-tower = { path = "../hitbox-tower", version = "0.1" }
hitbox-configuration = { path = "../hitbox-configuration", version = "0.1" }
chrono = { workspace = true }
async-trait = { workspace = true }

futures = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-test = "18.2"
reqwest = "0.12"
cucumber = { version = "0.21", features = ["output-junit", "libtest"] }
serde-saphyr = { workspace = true }
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
serde = { workspace = true, features = ["rc"] }
anyhow = "1"
hurl_core = { workspace = true }
hurl = { workspace = true }
http-body-util = { workspace = true }
http-body = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "rt-multi-thread"] }
dashmap = { version = "6.1", features = ["serde"] }
pretty_assertions = "1.4"
assert-json-diff = "2.0"
jaq-core = "2.1.0"
jaq-std = "2.1.0"
jaq-json = { version = "1.1.0", features = ["serde_json"] }
serial_test = "3.2"
tempfile = "3"
testcontainers = "0.25"
testcontainers-modules = { version = "0.13", features = ["redis"] }

[dependencies.rkyv]
workspace = true
optional = true

[dependencies.rkyv_typename]
workspace = true
optional = true

[features]
default = []
gzip = ["hitbox-backend/gzip"]
zstd = ["hitbox-backend/zstd"]
rkyv_format = ["dep:rkyv", "dep:rkyv_typename", "hitbox-backend/rkyv_format", "hitbox-http/rkyv_format"]
fsm-trace = ["hitbox-core/fsm-trace"]

[[test]]
name = "integration"
path = "tests/integration/bdd.rs"
harness = false

[[bench]]
name = "backend_format"
harness = false

[[bench]]
name = "backend_comparison"
harness = false

[[bench]]
name = "backend_concurrency"
harness = false

[[bench]]
name = "composition_overhead"
harness = false

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }

[[test]]
name = "fsm"
path = "tests/fsm/bdd.rs"
harness = false
