[package]
name = "hitbox-test"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false
categories = [
    "caching",
    "asynchronous",
    "network-programming",
    "web-programming",
]
description = "Hitbox integration tests"
readme = "README.md"
keywords = ["cache", "tower", "async", "http", "hitbox"]

[dependencies]
hitbox = { path = "../hitbox", version = "0.2" }
hitbox-core = { path = "../hitbox-core", version = "0.2" }
hitbox-http = { path = "../hitbox-http", version = "0.1" }
hitbox-backend = { path = "../hitbox-backend", version = "0.2" }
hitbox-moka = { path = "../hitbox-moka", version = "0.2" }
hitbox-feoxdb = { path = "../hitbox-feoxdb", version = "0.2" }
hitbox-redis = { path = "../hitbox-redis", version = "0.2" }
hitbox-tower = { path = "../hitbox-tower", version = "0.1" }
hitbox-configuration = { path = "../hitbox-configuration", version = "0.1", features = [
    "moka",
] }
chrono = { workspace = true }
async-trait = { workspace = true }

futures = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-test = "18.2"
reqwest = "0.13"
cucumber = { version = "0.22", features = ["output-junit", "libtest"] }
serde-saphyr = { workspace = true }
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
serde = { workspace = true, features = ["rc"] }
anyhow = "1"
hurl_core = { workspace = true }
hurl = { workspace = true }
http-body-util = { workspace = true }
http-body = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["registry"] }
hyper = { workspace = true, features = ["http2", "server"] }
hyper-util = { version = "0.1", features = [
    "tokio",
    "server",
    "server-auto",
    "http2",
] }
dashmap = { version = "6.1", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }
pretty_assertions = "1.4"
assert-json-diff = "2.0"
jaq-core = "2.1.0"
jaq-std = "2.1.0"
jaq-json = { version = "1.1.0", features = ["serde_json"] }
serial_test = "3.2"
tempfile = "3"
testcontainers = { version = "0.26", default-features = false }
testcontainers-modules = { version = "0.14", default-features = false, features = ["redis"] }

[dependencies.rkyv]
workspace = true
optional = true

[features]
default = []
gzip = ["hitbox-backend/gzip"]
zstd = ["hitbox-backend/zstd"]
metrics = ["hitbox/metrics"]
rkyv_format = [
    "dep:rkyv",
    "hitbox-backend/rkyv_format",
    "hitbox-http/rkyv_format",
    "hitbox-configuration/rkyv_format",
]

[[test]]
name = "bdd"
path = "tests/bdd.rs"
harness = false

[[bench]]
name = "backend_format"
harness = false

[[bench]]
name = "backend_comparison"
harness = false

[[bench]]
name = "backend_concurrency"
harness = false

[[bench]]
name = "composition_overhead"
harness = false

[[bench]]
name = "cache_future_reference"
harness = false

[[bench]]
name = "load_test"
harness = false

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
