[package]
name = "hitbox-tower"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
categories = [
    "caching",
    "asynchronous",
    "network-programming",
    "web-programming",
]
description = "Hitbox integration for Tower framework"
readme = "README.md"
keywords = ["cache", "tower", "async", "http", "hitbox"]

[dependencies]
tower = { workspace = true }
hitbox = { path = "../hitbox", version = "0.1" }
hitbox-core = { path = "../hitbox-core", version = "0.1" }
hitbox-http = { path = "../hitbox-http", version = "0.1" }
hitbox-backend = { path = "../hitbox-backend", version = "0.1" }
hitbox-moka = { path = "../hitbox-moka", version = "0.1" }
hyper = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async", "async_tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
http-body-util = { workspace = true }

[[bench]]
name = "cache_service_benchmark"
harness = false
