[package]
name = "hitbox"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
categories.workspace = true
description = "Asynchronous caching framework."
readme = "README.md"
keywords = ["cache", "async", "cache-backend", "hitbox", "tokio"]

[dependencies]
hitbox-core = { path = "../hitbox-core", version = "0.1", features = [] }
hitbox-backend = { path = "../hitbox-backend", version = "0.1" }
serde = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
metrics = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
tracing = { workspace = true }
async-trait = { workspace = true }
pin-project = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
dashmap = { workspace = true }
smol_str = { workspace = true }
humantime-serde = "1"
bounded-integer = { version = "0.6", features = ["macro", "serde1"] }

[features]
default = []

metrics = ["dep:metrics", "lazy_static", "hitbox-backend/metrics"]
rkyv_format = ["hitbox-core/rkyv_format", "hitbox-backend/rkyv_format"]

[dev-dependencies]
lazy_static = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "rt", "time"] }
hitbox-moka = { path = "../hitbox-moka" }
futures = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
